# BinMorph

./: .gitignore  BinMorph.sln  CMakeLists.txt  Cargo.toml  README.md  build.sh  docker-compose.yaml
core/: CMakeLists.txt  bm.cxx  bm.h  ui.cxx  ui.h
core/bm/: input.h  io.h  schema.h  traits.h
core/buffer/: BufferedData.h
core/input/: InputFile.h  traits.h
core/io/: Serialize.h
core/io/input/: InputFile.cxx  InputFile.h
core/io/output/: Mapper.h  Results.h  ToJSONMapper.h
core/schema/: Endian.h  FieldAttribute.h  Fields.cxx  Fields.h  Header.h  Mapper.cxx  Mapper.h  Parser.cxx  Parser.h  Schema.cxx  Schema.h  SchemaFile.cxx  SchemaFile.h  SchemaFileState.h  SchemaMapper.h  SchemaResults.h  SchemaValidator.h  Specification.h  Traits.h  TypeErasedSpec.h  schema.h
core/schema/attributes/: FieldAttributes.cxx  FieldAttributes.h  FieldAttribytes.cxx  Partition.cxx  Partition.h  Segment.h
core/schema/data/: BinData.h  Endian.h  EndianType.cxx  Fields.cxx  Fields.h  Reader.h
core/schema/json/: Attributes.cxx  Field.cxx  Field.h  FieldAttribute.cxx  FieldAttribute.h
core/schema/mappers/: JSONMapper.h  Mapper.h  Results.h  ToJSON.cxx  ToJSON.h
core/schema/results/: Results.h
core/schema/services/: ResultsService.h
core/schema/type_generator/: TypeGenerator.h
core/types/: traits.h
dev/images/devel/: CMakeLists.txt  Dockerfile  user-init.sh
documentation/: Doxyfile
examples/: dataSchema.json
newlib/: CMakeLists.txt  bm.h  schema.h
newlib/core/: FieldAttribute.h  Registry.cxx  Registry.h  Schema.cxx  Schema.h  SchemaRegister.cxx  SchemaRegister.h
newlib/core.bak/: SchemaRegister.h  SchemaUtils.cxx  SchemaUtils.h
newlib/core/Schema/: Schema.cxx  Schema.h
newlib/core/types/: traits.h
newlib/tests/: lib.c
newlib/tests/core/: AttributeTests.cxx  CMakeLists.txt
newlib/tests/lib-usage/: Program.cs  lib-usage.csproj
scripts/: launchConfigs.sh  launch_template.json  remove-win-nl.sh  watch.sh
tests/: CMakeLists.txt  TestUtils.h.in
tests/cli/: cliExampleTests.cxx  defaultCLIUsageTests.cxx  mappertest.h
tests/core/: AttributesTests.cxx  GeneratedHeaderTests.cxx  PartitionTests.cxx  SchemaMapperTests.cxx  SchemaTests.cxx  TypeGenTests.cxx  attributeTests.cxx  binDataTests.cxx  bmTests.cxx  dataProviderTests.cxx  inputFileTests.cxx  inputTests.cxx  ioUtilsTests.cxx  libBinMorphTests.cxx  mapResultsTests.cxx  mapperImplTests.cxx  outputTests.cxx  paramPackMapperTests.cxx  processedOutputTests.cxx  providerTests.cxx  schemaResultsTests.cxx  schemaTests.cxx  typeTraitsTests.cxx
tests/schema/: fieldsSchemaTests.cxx  inputSchemaTests.cxx  jsonDataTests.cxx  parserTests.cxx  schemaFileTests.cxx  schemaMapperTests.cxx  schemaParserTests.cxx  simpleTests.cxx
tests/schema/specifications/: headerSpecTests.cxx  specificationTests.cxx
tests/utils/: fsUtils.h  headerPartition.h
tests/utils/schemas/: 256.json  _simple.json  header.json  large.json  multispec.json  partOverlap.json  scllc.json  scllc2.json  simple.json  typeGen.json
ui/: BinMorph.cs  Program.cs  ui.csproj
